--- a/src/Vista/Inicio.form
+++ b/src/Vista/Inicio.form
@@ -306,11 +306,11 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" pref="239" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   <Component id="minimize" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="close" min="-2" pref="25" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -1218,7 +1218,7 @@
                               <Component id="jLabel10" max="32767" attributes="0"/>
                               <Component id="validateFile" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="573" max="32767" attributes="0"/>
+                          <EmptySpace pref="45" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
