--- a/src/Vista/Inicio.form
+++ b/src/Vista/Inicio.form
@@ -425,7 +425,7 @@
                               <Component id="transmision_correction_panel" alignment="0" max="32767" attributes="0"/>
                               <Component id="recepcion_correction_panel" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="63" max="32767" attributes="0"/>
+                          <EmptySpace pref="55" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -610,16 +610,13 @@
                                   </Group>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                              <Component id="bits_ruido_field" min="-2" pref="90" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                              <Component id="sourceHam" min="-2" pref="133" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="jLabel13" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel17" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="sourceHam" max="32767" attributes="0"/>
+                                          <Component id="bits_ruido_field" pref="90" max="32767" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="0" pref="20" max="32767" attributes="0"/>
                                   </Group>
@@ -681,7 +678,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Tahoma" size="12" style="0"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Archivo .ham "/>
+                        <Property name="text" type="java.lang.String" value="Nombre de archivo .ham "/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="sourceHam">
